# simple-escrow

./: .gitignore  README.md  cabal.project  concurrent-sc.cabal  simple-escrow.cabal  standard-escrow.cabal
.github/workflows/: haskell.yml
src/: Escrow.hs
src/Escrow/: Business.hs  OffChain.hs  OnChain.hs  Tokens.hs  Types.hs  Validator.hs
src/Utils/: Currency.hs  OffChain.hs  OnChain.hs  ScriptContext.hs
src/Utils/Currency/: Minting.hs  OneShot.hs
test/: Main.hs
test/Tests/: Utility.hs
test/Tests/OffChain/: Tests.hs  Traces.hs
test/Tests/Prop/: Escrow.hs
